# synaptics-0078-backend

./: .gitignore  README.md  meson.build
backend/: synaptics-service
builddir/: build.ninja  compile_commands.json  synaptics-backend  synaptics-capture
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: install-log.txt  meson-log.txt  meson-setup.txt
dbus/: net.reactivated.Fprint.conf
pam/: kscreenlocker.example
pam.d/: gdm-password  kde-fingerprint  kscreenlocker  login  polkit-1  sddm  sddm-fingerprint  sudo
scripts/: post-install.sh  pre-remove.sh
src/: capture.c  device.c  device.h  main.c  nbis-helper.c  pam_synaptics.c  storage.c  storage.h  synaptics-capture.c
systemd/: synaptics-backend.service
